--- a/MeshViewer/MeshViewer.vcxproj.filters
+++ b/MeshViewer/MeshViewer.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClCompile Include="MainWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MeshModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mainwindow.ui">
@@ -93,9 +96,6 @@
     <ClInclude Include="ArcBall.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="globalFunctions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="MeshSelector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -104,6 +104,9 @@
     </ClInclude>
     <ClInclude Include="GeneratedFiles\ui_SaveSelection.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshModel.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
